<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- 侧边栏导航菜单 -->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_music"
            android:title="@string/title_songs"
            android:checked="true" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_music_playlist"
            android:title="@string/title_playlists" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_history"
            android:title="@string/title_recent_play" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_scan"
            android:title="@string/title_scan_music" />
    </group>

</menu>